MODON MRE BPDEV/force-app/main/default/objects/Site_Config__mdt/Site_Config__mdt.object-meta.xml
<CustomObject>
    <label>Site Config</label>
    <pluralLabel>Site Configs</pluralLabel>
</CustomObject>