MODON MRE BPDEV/force-app/main/default/objects/Site_Config__mdt/fields/Active_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Active_Project_Name__c</fullName>
    <inlineHelpText>Exact Name of the Project__c record the public microsite currently serves. Leave blank to take the microsite offline (&quot;no active launches&quot; state).</inlineHelpText>
    <label>Active Project Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>