MODON MRE BPDEV/force-app/main/default/objects/Site_Config__mdt/fields/Default_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Owner_Id__c</fullName>
    <inlineHelpText>User Id (15 or 18 char) that should own the Lead/Account/Contact/Opportunity records created by the public EOI auto-promote pipeline. Leave blank to fall back to the running user (only useful for testing).</inlineHelpText>
    <label>Default Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>