MODON MRE BPDEV/force-app/main/default/objects/Site_Config__mdt/fields/Public_Site_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_Site_Base_URL__c</fullName>
    <inlineHelpText>Public base URL of the Experience Cloud site including the URL prefix (e.g. https://modonproperties--bpdev.sandbox.my.site.com/eoi). Used by EoiInviteAdminController to build invite links. No trailing slash.</inlineHelpText>
    <label>Public Site Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>